 (Format: Year/Month/Day)
Changes for 1.0.0:
*07/09/20:
   * Updated ru_RU ( Thanks Slava Semushin )
*07/09/13:
   * Move dock windows to Dock layer and remove decorations (Mark)
     Ewmh.cc
*07/09/09:
   * Added support for Slovak language ( Thanks Martin Lukac )
     nls/sk_SK/*
*07/09/07:
   * Fix crash when changing toolbar visibility, #1786765 (Mark)
     FbTk/MenuItem.cc
*07/08/27:
   * Fix hardcoded Mod1, use ModKey() now (Mathias)
     Window.cc
*07/08/20:
   * Fix some focus issues with moving windows between workspaces (Mark)
     FocusControl.cc
*07/08/12:
   * Updated de_* translations, #1767986 ( Thanks Christian Loosli )
*07/08/11:
   * Updated Swedish translation sv_SE ( Henrik )
     sv_SE/Translation.m
*07/08/10:
   * Update Chinese translation zh_CN, thanks yhlfh
     zh_CN/Translation.m
*07/08/09:
   * Fix shaping handling, stage 2, (Simon)
     - rewrite the core of the Shape handling so that it properly 
       merges client and frame shapes. Fixes all sorts of odd shaping
       behaviour, and incidentally xeyes now gets a visible frame 
       (not having the frame was actually a bug).
     Shape.hh/cc FbWinFrame.hh/cc Window.hh/cc
   * Fix shaping handling, stage 1, (Simon)
     - do borders properly with rounded corners
     - propagate client clip mask as well as bounding mask
     Shape.hh/cc Window.cc
*07/08/07:
   * Rotate toolbar background texture along with toolbar, bug #1694959 (Mark)
     Toolbar.cc
*07/08/06:
   * Fix KDE Dockapps on restart (dont unmap), and some minor tweaks (Simon)
     SystemTray.hh/cc
*07/08/05:
   * When saving window info for rememberm use class name AND instance name,
     AND role if present. (Simon)
     - This should fix firefox/thunderbird issues, but note that mplayer
       (nogui) sets the vo driver name as the instance name.
     Remember.cc
   * Fix menu heading encoding (Simon) 
     sf.net bug #1712583: NLS:Non-latin characters displayed incorrectly in menu title
     MenuCreator.cc